--- a/index.html
+++ b/index.html
@@ -1,102 +1,228 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Markus Kapferer - Product Designer and Web Developer</title>
 </head>
 
 <body>
 
-    <h2>Summary</h2>
-    <img src="./assets/images/IMG_0388.JPG" alt="Markus Kapferer" height="200" style="border-radius: 50%;">
-    <p>Hi, I'm Markus Kapferer, Senior UX/UI Designer and Web Developer with a passion for designing, music and coding.
-    </p>
+    <!-- Navigation -->
+    <section id="navigation">
 
-    <hr />
+        <header class="p-3 text-bg-dark">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="./index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <img src="./assets/images/MK-Logo.jpg" alt="mk logo" height="32px" style="border-radius: 2px;">
+                    <h6 class="align-baseline mb-0 mx-2">MARKUS KAPFERER</h4>
+                </a>
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="#" aria-current="page" class="nav-link px-2 text-secondary">Home</a></li>
+                        <li class="nav-item dropdown">
+                            <a id="work" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Work
+                            </a>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="./public/SoLaWi.html">SoLaWi</a></li>
+                              <li><a class="dropdown-item" href="#">RepApp</a></li>
+                            </ul>
+                          </li>
 
-    <h2>Education</h2>
-    <ul>
-        <li>Bachelor of Arts, Media Computer Science - IU (2018 - 2022)</li>
-        <li>Media Engineering - Technische Hochschule Georg-Simon-Ohm Nuremberg (2015 - 2018)</li>
-    </ul>
+                    <li><a href="./public/about.html" class="nav-link px-2 text-white">About</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">CV</a></li>
+                </ul>
+            </div>
+        </header>
 
-    <h2>Work Experience</h2>
+    </section>
 
-    <ul>
-        <li>
-            <h3>Senior UX/UI Designer - ITONICS GmbH</h3>
-            <p>January 2023 - March 2024</p>
-            <ul>
-                <li>Lead a Team of UX/UI Designers</li>
-                <li>Worked together with Product Managers on specifications and UX Research</li>
-                <li>User Interviews & Data Analytics</li>
-                <li>Maintained the Design System (Figma)</li>
-                <li>Shaped the UX Vision & Strategy</li>
-            </ul>
-        </li>
-    </ul>
-    <br />
-    <ul>
-        <li>
-            <h3>UX/UI Designer - ITONICS GmbH</h3>
-            <p>November 2018 - January 2023</p>
-            <ul>
-                <li>UI Design for one Product Line (Adobe Xd)</li>
-                <li>Collaboration with Product Managers</li>
-                <li>Mobile App Design</li>
-                <li>Collaboration with the development Team</li>
-            </ul>
-        </li>
-    </ul>
-    <br />
-    <ul>
-        <li>
-            <h3>Working Student, Product Management - ITONICS GmbH</h3>
-            <p>November 2018 - January 2023</p>
-            <ul>
-                <li></li>
-                <li>Collaboration with Product Managers</li>
-                <li>Mobile App Design and Specification</li>
-                <li>Collaboration with the development Team</li>
-            </ul>
-        </li>
-    </ul>
-    <hr />
+    <!-- Hero -->
+    <section id="hero">
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                <div class="col-10 col-sm-8 col-lg-6">
+                    <img src="./assets/images/hero-image-1.png" class="d-block mx-lg-auto img-fluid"
+                        alt="Bootstrap Themes" height="400" loading="lazy">
+                </div>
+                <div class="col-lg-6">
+                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, <span id="yellow">I'm Markus,</span>
+                        UX/UI Designer and Web Developer</h1>
+                    <p class="lead fw-semibold">I have passion for <span id="purple">design</span>, <span
+                            id="blue">music</span> and <span id="green">coding.</span></p>
+                    <p class="fst-italic">Currently searching for new challenges.</p>
+                    <div class="row flex-lg-row-reverse align-items-center" style="width: 32px;"><script src="https://cdn.lordicon.com/lordicon.js"></script>
+                        <lord-icon
+                            src="https://cdn.lordicon.com/rmkahxvq.json"
+                            trigger="loop"
+                            speed="2"
+                            loading="lazy"
+                            colors="primary:#dee2e6">
+                        </lord-icon></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <h2>Skills</h2>
-    <ul>
-        <h3>Product Design</h3>
-        <li>User Research ⭐️⭐️⭐️⭐️⭐️</li>
-        <li>Figma ⭐️⭐️⭐️⭐️⭐️</li>
-        <br />
+    <!-- Recent Projects -->
+    <section id="recentProjects">
+        <div class="container px-4 py-5" id="custom-cards">
+            <h2 class="pb-2 border-bottom text-dark"><img src="./assets/images/paint-bucket.svg" alt="paint-bucket"
+                    height="34" class="align-center pe-12"> Recent Projects</h2>
+            <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5">
+                <div class="col">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+                        style="background-image: url('./assets/images/SoLaWi.jpg');">
+                        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Design Thinking: SoLaWi</h3>
+                            <p>(german only)</p>
+                            <ul class="d-flex list-unstyled mt-auto">
+                                <li class="me-auto ">
+                                    <img src="./assets/images/Design-icon.png" alt="UX Design Project" width="32"
+                                        height="32" class="me-2"> <span class="shadow bold">Design Project</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-        <h3>Product Management</h3>
-        <li>Scrum (Jira) ⭐️⭐️⭐️</li>
-        <li>Product Documentation (Confluence) ⭐️⭐️⭐️⭐️</li>
-        <li>Product Specification ⭐️⭐️⭐️⭐️</li>
+                <div class="col">
+                    <a href="./.."></a>
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+                        style="background-image: url('unsplash-photo-2.jpg');">
+                        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">RepAPP: Track your weight training
+                            </h3>
+                            <p>(coming soon)</p>
+                            <ul class="d-flex list-unstyled mt-auto">
+                                <li class="me-auto">
+                                    <img src="./assets/images/Design-icon.png" alt="UX Design Project" width="32"
+                                        height="32" class="me-2 shadow"> <span class="bold">Design Project</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-        <h3>Languages</h3>
-        <li>English ⭐️⭐️⭐️⭐️</li>
-        <li>Spanish ⭐️⭐️</li>
-        <li>German (Mother Language)⭐️⭐️⭐️⭐️⭐️</li>
+            </div>
+        </div>
+    </section>
 
-        <h3>Video Production</h3>
-        <li>Story Boards ⭐️⭐️</li>
-        <li>Video Cutting (Adobe Premiere) ⭐️⭐️</li>
-        <li>Video Editing and Animations (Adobe After Effects) ⭐️⭐️⭐️</li>
+    <!-- Skills -->
+    <section id="skills">
+        <div class="container px-4 py-5" id="skills">
+            <h2 class="pb-2 border-bottom"><img class="pb-1" src="./assets/images/dpad.svg" alt="dpad" height="32" width="32"
+                    class="align-center pe-1"> Skills</h2>
 
-    </ul>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5">
+                <div class="col d-flex align-items-start">
+                    <img src="./assets/images/palette.svg" alt="palette" class="me-3">
+                    <div>
+                        <h3 class="fw-bold mb-1 fs-4 text-body-emphasis">Design</h3>
+                        <p>Figma, Adobe Xd,
+                            User Interviews, Personas,
+                            Design Systems,
+                            Info Architecture, Onboarding</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <img src="./assets/images/keyboard.svg" alt="palette" class="me-3">
+                    <div>
+                        <h3 class="fw-bold mb-1 fs-4 text-body-emphasis">Product Management</h3>
+                        <p>User Journey Maps, Agile development methods, Feature specification,
+                            Competitor Analysis, Data Analytics,
+                            Jira, Confluence</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <img src="./assets/images/code-slash.svg" alt="palette" class="me-3">
+                    <div>
+                        <h3 class="fw-bold mb-1 fs-4 text-body-emphasis">Coding</h3>
+                        <p>Java, HTML, CSS, Java-Script, SQL,
+                            Frameworks: Angular, Bootstrap </p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <img src="./assets/images/ear.svg" alt="palette" class="me-3">
+                    <div>
+                        <h3 class="fw-bold mb-1 fs-4 text-body-emphasis">UX Research</h3>
+                        <p>User Interviews, Personas,
+                            Empathy Maps, Usability Tests,
+                            Surveys (Gainsight PX)</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <img src="./assets/images/chat-left-quote.svg" alt="palette" class="me-3">
+                    <div>
+                        <h3 class="fw-bold mb-1 fs-4 text-body-emphasis">Languages</h3>
+                        <p>German (native), <br>
+                            English (fluently speaking and writing), <br>
+                            Spanish (trying 😅)</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <img src="./assets/images/check-circle.svg" alt="palette" class="me-3">
+                    <div>
+                        <h3 class="fw-bold mb-1 fs-4 text-body-emphasis">Others</h3>
+                        <p>Story Boards, Adobe Premiere,
+                            Adobe After Effects,
+                            Ableton Live</p>
+                    </div>
+                </div>
 
-    <hr />
+            </div>
+        </div>
+        </div>
 
-    <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
+    </section>
 
-    <br />
+    <!-- Experience -->
+    <section id="experience">
+        <div class="container px-4 py-5" id="experience">
+            <h2 class="pb-2 border-bottom"><img class="pb-1" src="./assets/images/briefcase.svg" alt="dpad" height="32" width="32"
+                    class="align-center pe-1"> Experience</h2>
+
+            <div class="row row-cols-1 g-4 py-5">
+                    <div>
+                        <h3 class="mb-2 fs-4 text-body-emphasis">Senior UX/UI Designer</h3>
+                        <p class="fst-italic mb-4">ITONICS GmbH • January 2023 - March 2024</p>
+                        <p class="mb-1">Led a team of UX/UI designers and had the design lead for all product lines, 
+                            collaborating with product managers to define product specs.
+                            Conducting UX research including secondary and primary research methods.
+                            Maintained the design system in Figma, ensuring consistency.
+                            Played a key role in shaping the UX vision and strategy, aligning them with business goals and user feedback. </p>
+                    </div>
+            </div>
+            <div class="row row-cols-1 g-4 py-5">
+                <div>
+                    <h3 class="mb-2 fs-4 text-body-emphasis">UX/UI Designer</h3>
+                    <p class="fst-italic mb-4">ITONICS GmbH • November 2018 - January 2023</p>
+                    <p class="mb-1">Led UI design for a product line using Adobe Xd, fostering collaboration with product managers. Specialized in mobile app design and worked closely with the development team to ensure seamless integration.</p>
+                </div>
+        </div>
+        <div class="row row-cols-1 g-4 py-5">
+            <div>
+                <h3 class="mb-2 fs-4 text-body-emphasis">Working Student, Product Management</h3>
+                <p class="fst-italic mb-4">ITONICS GmbH • October 2016 - November 2018</p>
+                <p class="mb-1">Collaborated with product managers to design and specify mobile apps, working closely with the development team. Additionally, created product videos for clients and marketing materials using Adobe Premiere and After Effects.</p>
+            </div>
+    </div>
+        </div>
+    </section>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 <footer>
-    <p>© 2024 Markus Kapferer</p>
-  </footer>
+    <div class="container d-flex align-items-start "><p class="py-5">© 2024 Markus Kapferer</p></div>
+</footer>
 
 </html>
