--- a/public/about.html
+++ b/public/about.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-  <html lang="en">
-  <head>
+<html lang="en" data-bs-theme="dark">
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Markus Kapferer - Product Designer and Web Developer</title>
+</head>
   <body>
+
+    <!-- Navigation -->
+    <section id="navigation">
+
+      <header class="p-3 text-bg-dark">
+          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+              <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                  <img src="../assets/images/MK-Logo.jpg" alt="mk logo" height="32px" style="border-radius: 2px;">
+                  <h6 class="align-baseline mb-0 mx-2">MARKUS KAPFERER</h4>
+              </a>
+              <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                  <li><a href="../index.html" class="nav-link px-2">Home</a></li>
+                      <li class="nav-item dropdown">
+                          <a id="work" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Work
+                          </a>
+                          <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./public/SoLaWi.html">SoLaWi</a></li>
+                            <li><a class="dropdown-item" href="#">RepApp</a></li>
+                          </ul>
+                        </li>
+
+                  <li><a href="./public/about.html" aria-current="page" class="nav-link px-2 text-white text-secondary">About</a></li>
+                  <li><a href="#" class="nav-link px-2 text-white">CV</a></li>
+              </ul>
+          </div>
+      </header>
+
+    <div class="px-4 py-5 my-5 text-center">
+      <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+      <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+        </div>
+      </div>
+    </div>
+
     <h1>Who am I?</h1>
     <img src="../assets/images/markus.JPG" alt="Markus Kapferer" height="200" style="border-radius: 50%;">
 
