--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a href="./public/SoLaWi.html">
                     <div class="col">
                         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                            style="background-image: url('./assets/images/SoLaWi.jpg');">
+                            style="background-image: url('./assets/images/project-solawi/SoLaWi.jpg');">
                             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Design Thinking: SoLaWi <br> App
                                 </h3>
