--- a/public/SoLaWi.html
+++ b/public/SoLaWi.html
@@ -17,32 +17,30 @@
 <body>
     <!-- Navigation -->
     <section id="navigation">
-
         <header class="p-3 text-bg-dark">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <a href="../index.html" class="navbar-brand d-flex align-items-center">
                     <img src="../assets/images/MK-Logo.jpg" alt="mk logo" height="32px" style="border-radius: 2px;">
                     <h6 class="align-baseline mb-0 mx-2">MARKUS KAPFERER</h4>
                 </a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="../index.html" aria-current="page" class="nav-link px-2 text-secondary">Home</a></li>
+                    <li><a href="../index.html"  class="nav-link px-2">Home</a></li>
                     <li class="nav-item dropdown">
-                        <a id="work" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a id="work" class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Work
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./public/SoLaWi.html">SoLaWi</a></li>
-                            <li><a class="dropdown-item" href="#">RepApp</a></li>
+                            <li><a class="nav-link dropdown-item avtive" aria-current="page" href="../public/SoLaWi.html">SoLaWi</a></li>
+                            <li><a class="nav-link dropdown-item" href="#">RepApp</a></li>
                         </ul>
                     </li>
-
-                    <li><a href="./public/about.html" class="nav-link px-2 text-white">About</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">CV</a></li>
+                    <li><a href="#" class="nav-link px-2">About</a></li>
+                    <li><a href="https://drive.google.com/file/d/1L1RvJWwiJvAnNpC0IJl8PlsVWmjOHNcN/view?usp=sharing"
+                            target="_blank" class="nav-link px-2">CV</a></li>
                 </ul>
             </div>
         </header>
-
     </section>
 
     <!-- Project Header -->
