--- a/public/about.html
+++ b/public/about.html
@@ -2,74 +2,72 @@
 <html lang="en" data-bs-theme="dark">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Markus Kapferer - Product Designer and Web Developer</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Markus Kapferer - Product Designer and Web Developer</title>
 </head>
   <body>
 
     <!-- Navigation -->
     <section id="navigation">
-
       <header class="p-3 text-bg-dark">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-              <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+              <a href="../index.html" class="navbar-brand d-flex align-items-center">
                   <img src="../assets/images/MK-Logo.jpg" alt="mk logo" height="32px" style="border-radius: 2px;">
                   <h6 class="align-baseline mb-0 mx-2">MARKUS KAPFERER</h4>
               </a>
               <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                  <li><a href="../index.html" class="nav-link px-2">Home</a></li>
-                      <li class="nav-item dropdown">
-                          <a id="work" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Work
-                          </a>
-                          <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./public/SoLaWi.html">SoLaWi</a></li>
-                            <li><a class="dropdown-item" href="#">RepApp</a></li>
-                          </ul>
-                        </li>
-
-                  <li><a href="./public/about.html" aria-current="page" class="nav-link px-2 text-white text-secondary">About</a></li>
-                  <li><a href="#" class="nav-link px-2 text-white">CV</a></li>
+                  <li><a href="../index.html"  class="nav-link px-2">Home</a></li>
+                  <li class="nav-item dropdown">
+                      <a id="work" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                          aria-expanded="false">
+                          Work
+                      </a>
+                      <ul class="dropdown-menu">
+                          <li><a class="nav-link dropdown-item" href="../public/SoLaWi.html">SoLaWi</a></li>
+                          <li><a class="nav-link dropdown-item" href="#">RepApp</a></li>
+                      </ul>
+                  </li>
+                  <li><a href="#" aria-current="page" class="nav-link px-2 active">About</a></li>
+                  <li><a href="https://drive.google.com/file/d/1L1RvJWwiJvAnNpC0IJl8PlsVWmjOHNcN/view?usp=sharing"
+                          target="_blank" class="nav-link px-2">CV</a></li>
               </ul>
           </div>
       </header>
+  </section>
 
+    <!-- Hero-->
     <div class="px-4 py-5 my-5 text-center">
-      <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-      <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
-      <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-        </div>
+      <img class="d-block mx-auto mb-4" src="../assets/images/IMG_0388.JPG" alt="" height="200" style="border-radius: 50%;">
+      <h1 class="display-5 fw-bold text-body-emphasis">Hi, I'm Markus Kapferer,</h1>
+      <div class="col-lg-10 mx-auto">
+        <p>originating from the scenic southern areas of Bavaria, 
+          in close proximity to the Austrian border. I'm currently living in Nuremberg, together with my wife.
+          Armed with a bachelor's degree in computer science, I have a background as a Senior UX/UI Designer, 
+          leading a dynamic team in crafting seamless user experiences. 
+          My role involves guiding product managers through UX research and spearheading 
+          the design and usability aspects of new features across both product lines.</p>
+        
+        <p>Driven by a passion for contributing to the greater good, 
+          I'm currently especially interested in designing solutions that benefit humanity. 
+          Prior to my UI journey, I dabbled in video projects, creating compelling content for various clients, 
+          internal communications, and marketing materials showcasing innovative software products.</p>
+        
+        <p>Away from computer screens and coding, you'll catch me jamming on my guitar or play console games. 
+          I'm a total tech geek, fascinated by things like electric cars, renewable energy, cool gadgets, and the newest devices. 
+          I've been into web development since I was 9, 
+          and I'm all about staying ahead in the world of innovation. 
+          Come along as I blend creativity, tech, and a passion for making a positive impact on the world.</p>
+      </div>
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <a href="mailto:markus.kapferer@me.com"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Contact Me</button></a>
+        <a href="../index.html"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Back to Home</button></a>
       </div>
     </div>
 
-    <h1>Who am I?</h1>
-    <img src="../assets/images/markus.JPG" alt="Markus Kapferer" height="200" style="border-radius: 50%;">
 
-<h2>Hi, I'm Markus Kapferer,</h2>
-<p>originating from the scenic southern areas of Bavaria, 
-  in close proximity to the Austrian border. I'm currently living in Nuremberg, together with my wife.
-  Armed with a bachelor's degree in computer science, I have a background as a Senior UX/UI Designer, 
-  leading a dynamic team in crafting seamless user experiences. 
-  My role involved guiding product managers through UX research and spearheading 
-  the design and usability aspects of new features across both product lines.</p>
-
-<p>Driven by a passion for contributing to the greater good, 
-  I'm currently especially interested in designing solutions that benefit humanity. 
-  Prior to my UI journey, I dabbled in video projects, creating compelling content for various clients, 
-  internal communications, and marketing materials showcasing innovative software products.</p>
-
-<p>Away from computer screens and coding, you'll catch me jamming on my guitar or play console games. 
-  I'm a total tech geek, fascinated by things like electric cars, renewable energy, cool gadgets, and the newest devices. 
-  I've been into web development since I was 9, 
-  and I'm all about staying ahead in the world of innovation. 
-  Come along as I blend creativity, tech, and a passion for making a positive impact on the world.</p>
   </body>
   </html>
