update pawpalz card

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 
                     <div class="col">
                         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                            style="background-image: url('./assets/images/gym-tracking-app.jpg');">
+                            style="background-image: url('./assets/images/PawPalz.jpg');">
                             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">COMING SOON RepAPP: Track your weight training
+                                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">COMING SOON PawPalz: social media for cats
                                 </h3>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="me-auto">
-                                        <img src="./assets/images/Design-icon.png" alt="UX Design Project" width="30"
-                                            height="30" class="me-2 shadow"> <span class="bold shadow-lg">Design Project</span>
+                                        <img src="./assets/images/Code-icon.png" alt="Coding-Project" width="30"
+                                            height="30" class="me-2 shadow"> <span class="bold shadow-lg">Angular/TypeScript Project</span>
                                     </li>
                                 </ul>
                             </div>
@@ -145,8 +145,8 @@
                     <img src="./assets/images/code-slash.svg" alt="palette" class="me-3">
                     <div>
                         <h3 class="fw-bold mb-1 fs-4 text-body-emphasis">Coding</h3>
-                        <p>Java, HTML, CSS, Java-Script, SQL,
-                            Frameworks: Angular, Bootstrap </p>
+                        <p>Java, HTML, CSS, Java-Script, TypeScript, Node.js, SQL,
+                            Angular, React, Bootstrap </p>
                     </div>
                 </div>
                 <div class="col d-flex align-items-start">
