--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <img src="./assets/images/code-slash.svg" alt="palette" class="me-3">
                     <div>
                         <h3 class="fw-bold mb-1 fs-4 text-body-emphasis">Coding</h3>
-                        <p>Java, HTML, CSS, Java-Script, TypeScript, Node.js, SQL,
+                        <p>Java, HTML, CSS, Java-Script, TypeScript, SQL,
                             Angular, React, Bootstrap </p>
                     </div>
                 </div>
